applications/jellyfin/istio-jellyfin-lan-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jellyfin-gw
  namespace: jellyfin
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "jellyfin.itosbl.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "jellyfin.itosbl.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: jellyfin-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: jellyfin-gw
  hostnames:
    - "jellyfin.itosbl.com"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
