applications/jellyfin/istio-jellyfin-local-only.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jellyfin-local-only
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: jellyfin-gw
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - 192.168.1.0/24
